<resources>
    <string name="app_name">Стройка</string>

    <!-- Menu Drawing Strings-->
    <string name="stroyka">Стройка</string>
    <string name="objects">Объекты</string>
    <string name="active_objects">Активные объекты</string>
    <string name="materials">Материалы</string>
    <string name="shipments">Отгрузки</string>
    <string name="requests">Заявки</string>
    <string name="instruments">Инструменты</string>
    <string name="account_category">Аккаунт</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>

    <!-- Sign Dialog-->
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш Email!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="guest">Гость</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения вашего аккаунта!</string>

    <!-- Sign Dialog-->
    <string name="link_done">Email успешно соединен с Google аккаунтом</string>
    <string name="enter_to_g">У вас уже есть аккаунт с этим Email адресом, войдите по нему.</string>

    <!-- Edit Activity-->
    <string name="select_cat">*Выберите тип объекта</string>
    <string name="select_area">*Выберите район</string>
    <string name="select_village">*Выберите деревню</string>
    <string name="select_organization">*Выберите организацию</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Описание</string>
    <string name="create">Создать</string>
    <string name="change">Изменить</string>
    <string name="no_active_objects">Нет активных объектов</string>

    <!-- Description-->
    <string name="area">Район:</string>
    <string name="village">Деревня:</string>
    <string name="organization">Организация:</string>

</resources>