<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".act.EditObjectsAct">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpImages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.viewpager2.widget.ViewPager2>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:onClick="onClickGetImages"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/vpImages"
                        app:srcCompat="@drawable/ic_edit" />

                    <ProgressBar
                        android:id="@+id/pBarLoad"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/vpImages"
                        app:layout_constraintStart_toStartOf="@+id/vpImages"
                        app:layout_constraintTop_toTopOf="@+id/vpImages" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center"
                android:onClick="onClickSelectArea"
                android:padding="10dp"
                android:text="@string/select_area"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center"
                android:onClick="onClickSelectVillage"
                android:padding="10dp"
                android:text="@string/select_village"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvOrganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center"
                android:onClick="onClickSelectVillage"
                android:padding="10dp"
                android:text="@string/select_organization"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/description_hint"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_dark" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickPublish"
                android:text="Button" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>